rollouts-demo-deployment-master/rollouts-demo-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
spec:
  type: NodeType
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696
