rollouts-demo-deployment-master/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: rollouts-demo.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: rollouts-demo
          servicePort: 80
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.rollouts-demo-stable: |
      {
        "Type":"forward",
        "ForwardConfig":{
          "TargetGroups":[
            {
                "Weight":80,
                "ServiceName":"rollouts-demo-canary",
                "ServicePort":"80"
            },
            {
                "Weight":20,
                "ServiceName":"rollouts-demo-stable",
                "ServicePort":"80"
            }
          ]
        }
      }
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: rollouts-demo-stable
              servicePort: use-annotation
